--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
         <p>{{ description }}</p>
         <form method="post" action="{{ url_for('start_game') }}">
             {{ form.csrf_token() }}
+            {{ form.name.label }}
+            {{ form.name }}
             {{ form.difficulty.label }}
             {{ form.difficulty }}
             {{ form.start_button }}
