--- a/templates/game_page.html
+++ b/templates/game_page.html
@@ -9,6 +9,9 @@
             {{ form.answer }}
             {{ form.submit_answer }}
         </form>
+        <div>
+            <span>Осталось времени: </span><span id="counter">15</span>
+        </div>
     </div>
     {% if previous_result %}
         <div class="{{ result_class }} bg-opacity-50 shadow-sm m-2 p-2 rounded-1">
@@ -18,6 +21,13 @@
 {% endblock %}
 {% block scripts %}
     <script>
+        function updateCount() {
+            let element = document.getElementById("counter");
+            let currentValue = parseInt(element.innerHTML);
+            currentValue -= 1;
+            element.innerHTML = currentValue.toString();
+        }
         setTimeout(() => document.forms[0].submit(), 15000);
+        setInterval(updateCount, 1000);
     </script>
 {% endblock %}
